# label-words-are-anchors

./: .gitignore  Error_analysis.ipynb  README.md  attention_attr.py  attention_attr_ana.ipynb  compress_analysis.ipynb  compress_analysis_time.ipynb  deep_analysis.ipynb  do_compress.py  do_compress_time.py  do_compress_top.py  do_deep_layer.py  do_nclassify.py  do_shallow_layer.py  do_shallow_layer_non_label.py  experiment_attn_attr.py  experiment_compress.py  experiment_compress_time.py  experiment_deep.py  experiment_ncls.py  experiment_reweighting.py  experiment_shallow.py  grad_demo.py  nclassfication.ipynb  pyproject.toml  requirements.txt  reweighting.ipynb  reweighting.py  shallow_analysis.ipynb
icl/analysis/: activation_analysis.py  attentioner.py  attentioner_for_attribution.py  attentioner_for_train.py  compress.py  compress_time.py  compress_top.py  deep_layer.py  n_classification.py  numpy_writer.py  qkv_getter.py  reweighting.py  shallow_layer.py  shallow_layer_non_label.py
icl/lm_apis/: lm_api_base.py
icl/util_classes/: arg_classes.py  context_solver.py  predictor_classes.py
icl/utils/: data_wrapper.py  display_utils.py  experiment_utils.py  load_huggingface_dataset.py  load_local.py  other.py  prepare_model_and_tokenizer.py  random_utils.py  visualization.py
